--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Invitaciones digitales para eventos especiales"
+      content="Pixel & Papel | Invitaciones digitales para eventos especiales"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/q.png" />
     <!--
